2007-10-13 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/utils.py: Added path option (to store dowloaded web pages)
	* Bicho/bicho.conf: Added path option (by default /tmp/bicho/)
	* Bicho/backends/sf.py: Store web pages functionality added 
	* Bicho/main.py: Path option added

	Bicho stores downloaded web pages


2007-09-10 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* configure.in:

	Release 0.1


2007-09-10 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/bicho.conf: config file added

	Added config file


2007-09-09 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/Bug.py: Added Attachment class
	* Bicho/SqlBug.py: Added support for new class Attachment (class storm
	DBAttachment and sql queries to create table Attachment in mysql,
	postgres and sqlite)
	* Bicho/backends/sf.py: Modified to add Attachments to database
	* Bicho/backends/ParserSFBugs.py: Added more states to parse HTML
	which contains attachments and some bugs were fixed (related to 
	comments)
	
	Attachments are registered in this version and they are stored in the
	database.


2007-09-08 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/Bug.py: Added "Comment" class
	* Bicho/SqlBug.py: Added support for new class "Comment" (class storm
	DBComment and sql queries to create table Comment in mysql, postgres
	and sqlite)
	* Bicho/backends/sf.py: Modified to add Comments to database
	* Bicho/backends/ParserSFBugs.py: Added four more states to parse HTML
	which contains comments.
	
	Comments are registered in this version and they are stored in the
	database.


2007-09-07 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>

	* Bicho/main.py: Added support for config file (it must be in
	Bicho/bicho.conf)
	* Bicho/Bicho.py: Minor changes (to support options store class)
	* Bicho/backends/sf.py: Minor changes (to support options store class)