@@ -1,3 +1,12 @@
+2007-10-25 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>
+
+	* Bicho/backends/ParserSFBugs.py: Added source code to unify in the same file SourceForge parser functionality
+	* Bicho/backends/HTMLUtils.py: Used just for HTML Utils (join urls and so on)
+	* Bicho/backends/sf.py: Parser for getting links was renamed
+
+	Unification of SourceForge parser in just one file
+
+
 2007-10-13 Daniel Izquierdo Cortazar  <dizquierdo@gsyc.escet.urjc.es>
 
 	* Bicho/utils.py: Added path option (to store dowloaded web pages)
